--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,23 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Каталог</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <nav>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="####">Контакты</a>
+    <a class="link_menu" href="../index.html">Главная</a>
+    <a class="link_menu" href="catalog.html">Каталог</a>
+    <a class="link_menu" href="####">Контакты</a>
   </nav>
-  <h1>Каталог</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolor sequi aspernatur aliquid error accusantium totam eum dolore? Asperiores deserunt ipsa quibusdam, consequuntur distinctio libero? Amet vero rerum, dicta minus enim dolore omnis, asperiores accusantium in illo similique officiis non aliquam beatae? Totam accusantium temporibus hic neque inventore nihil, cumque corporis vero, fuga nesciunt, ex quis odit nostrum repellendus! Quasi assumenda inventore placeat, perspiciatis ea unde quibusdam repellat, debitis iusto sed minima adipisci doloribus illum optio ullam molestias aperiam quidem soluta obcaecati accusamus dicta. Necessitatibus beatae ad consequatur iste aperiam optio, asperiores earum maxime alias facere fugit illo ab velit exercitationem sunt excepturi magnam sapiente tempore. Recusandae cum ad ipsam beatae eaque illo, ducimus tempora nihil voluptatum dolorem deleniti illum? Ex maiores rerum quam blanditiis fugit impedit, ipsa expedita necessitatibus vero voluptates reiciendis repudiandae incidunt cum non commodi facilis dolor corporis aperiam amet, fuga hic recusandae est. Aut, magnam molestias?</p>
+  <h1 class="title">Каталог</h1>
+  <p class="text_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolor sequi aspernatur aliquid error accusantium totam eum dolore? Asperiores deserunt ipsa quibusdam, consequuntur distinctio libero? Amet vero rerum, dicta minus enim dolore omnis, asperiores accusantium in illo similique officiis non aliquam beatae? Totam accusantium temporibus hic neque inventore nihil, cumque corporis vero, fuga nesciunt, ex quis odit nostrum repellendus! Quasi assumenda inventore placeat, perspiciatis ea unde quibusdam repellat, debitis iusto sed minima adipisci doloribus illum optio ullam molestias aperiam quidem soluta obcaecati accusamus dicta. Necessitatibus beatae ad consequatur iste aperiam optio, asperiores earum maxime alias facere fugit illo ab velit exercitationem sunt excepturi magnam sapiente tempore. Recusandae cum ad ipsam beatae eaque illo, ducimus tempora nihil voluptatum dolorem deleniti illum? Ex maiores rerum quam blanditiis fugit impedit, ipsa expedita necessitatibus vero voluptates reiciendis repudiandae incidunt cum non commodi facilis dolor corporis aperiam amet, fuga hic recusandae est. Aut, magnam molestias?</p>
   <img width="300" src="../img/mango_smoothies.jpg" alt="Смузи из манго">
-  <h2>Смузи из манго</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sit quasi, perferendis accusamus consequatur ex modi delectus nulla similique molestiae non, animi ratione assumenda dolorum! Recusandae mollitia libero ea sed!</p>
+  <h2 class="subtitle">Смузи из манго</h2>
+  <p class="text_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sit quasi, perferendis accusamus consequatur ex modi delectus nulla similique molestiae non, animi ratione assumenda dolorum! Recusandae mollitia libero ea sed!</p>
   <img width="300" src="../img/borscht.jpg" alt="Борщ">
-  <h2>Борщ со сметаной и зеленью</h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati id odit cum eius, porro dolores magni perferendis qui! Dolorem facilis aspernatur adipisci! Unde repellat odit doloribus eius aliquam illum sunt?</p>
+  <h2 class="subtitle">Борщ со сметаной и зеленью</h2>
+  <p class="text_content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati id odit cum eius, porro dolores magni perferendis qui! Dolorem facilis aspernatur adipisci! Unde repellat odit doloribus eius aliquam illum sunt?</p>
   <img width="300" src="../img/tart_with_jam.jpg" alt="Пирог с джемом">
-  <h2>Пирог с клубничным джемом</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio laboriosam aut reprehenderit libero ipsam molestias mollitia ab totam tempora. Modi debitis aliquam tempora fuga ullam hic minima asperiores consequuntur provident.</p>
+  <h2 class="subtitle">Пирог с клубничным джемом</h2>
+  <p class="text_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio laboriosam aut reprehenderit libero ipsam molestias mollitia ab totam tempora. Modi debitis aliquam tempora fuga ullam hic minima asperiores consequuntur provident.</p>
 </body>
 </html>
