--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="####">Контакты</a>
+    <a class="link_menu" href="index.html">Главная</a>
+    <a class="link_menu" href="catalog/catalog.html">Каталог</a>
+    <a class="link_menu" href="####">Контакты</a>
   </nav>
-  <h1>Главная страница</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, aliquid ut. Ut excepturi sunt ullam mollitia, voluptatum ad, fugit esse distinctio officiis explicabo quos eligendi earum molestias incidunt quod voluptate.</p>
-  <h2>Добро пожаловать на сайт</h2>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo aliquam repellat, provident at id quibusdam sit inventore in nihil veniam nisi nam enim nostrum voluptatum earum maiores quaerat libero facilis.</p>
+  <h1 class="title">Главная страница</h1>
+  <p class="text_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, aliquid ut. Ut excepturi sunt ullam mollitia, voluptatum ad, fugit esse distinctio officiis explicabo quos eligendi earum molestias incidunt quod voluptate.</p>
+  <h2 class="subtitle">Добро пожаловать на сайт</h2>
+  <p class="text_content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo aliquam repellat, provident at id quibusdam sit inventore in nihil veniam nisi nam enim nostrum voluptatum earum maiores quaerat libero facilis.</p>
 </body>
 </html>
